:sparkles: feat(tabs.css): Fixed tab padding wrapped inside list, fixed vertical divider

--- a/src/core/layout.css
+++ b/src/core/layout.css
@@ -58,7 +58,7 @@ section {
     display: block;
     left: 50%;
     position: absolute;
-    top: 50%;
+    top: 0;
     transform: translateX(-50%);
 }
 
