--- a/src/ext/tabs.css
+++ b/src/ext/tabs.css
@@ -26,6 +26,7 @@
     border-bottom: 1px solid #eee; /* Bottom border of tabs */
     flex-grow: 1;
     list-style: none;
+    padding-inline-start: 0;
 }
 
 .tab-container li {
